--- a/my-project/.temp/ant-design-pro.less
+++ b/my-project/.temp/ant-design-pro.less
@@ -2109,6 +2109,68 @@
 /* 
   Convert to from  src/undefined
  */
+
+.antd-pro-pages-_-dashboard-mainpage-carousel {
+  text-align: center;
+  height: 320px;
+  line-height: 320px;
+  background: #364d79;
+  overflow: hidden;
+  margin-bottom: 50px;
+  .antd-pro-pages-_-dashboard-mainpage-h3 {
+    vertical-align: middle;
+    text-align: center;
+    color: #fff;
+  }
+  .antd-pro-pages-_-dashboard-mainpage-img {
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
+
+.antd-pro-pages-_-dashboard-mainpage-card {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+  width: 50%;
+  text-align: center;
+  overflow: hidden;
+  height: 150px;
+  line-height: 90px;
+  background: #ccc;
+
+  .antd-pro-pages-_-dashboard-mainpage-h1 {
+    vertical-align: middle;
+    text-align: center;
+    color: #2eabff;
+  }
+}
+
+.antd-pro-pages-_-dashboard-mainpage-card1 {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 35px;
+  width: 20%;
+  text-align: center;
+  overflow: hidden;
+  height: 50px;
+  line-height: 5px;
+  background: white;
+  border-color: red;
+  margin-bottom: 50px;
+
+  .antd-pro-pages-_-dashboard-mainpage-h3 {
+    vertical-align: middle;
+    text-align: center;
+    color: #2eabff;
+  }
+}
+
+/* 
+  Convert to from  src/undefined
+ */
 .antd-pro-pages-_-login-login-main {
   width: 368px;
   margin: 0 auto;
@@ -4261,13 +4323,21 @@ a.antd-pro-pages-list-articles-listItemMetaTitle {
   Convert to from  src/undefined
 
   */
-
 .antd-pro-pages-user-login-main {
   margin-left: 65px; // card部分的样式
-  width: 368px;
+  width: 364px; //500px
+
+  .antd-pro-pages-user-login-twoD {
+    text-align: right;
+  }
 
   @media screen and (max-width: @screen-sm) {
     width: 95%;
+  }
+
+  .antd-pro-pages-user-login-img {
+    vertical-align: middle;
+    margin-left: 65px;
   }
 
   .antd-pro-pages-user-login-icon {
