--- a/my-project/src/pages/User/Login.less
+++ b/my-project/src/pages/User/Login.less
@@ -2,10 +2,19 @@
 
 .main {
   margin-left: 65px; // card部分的样式
-  width: 368px;
+  width: 364px;  //500px
+
+  .twoD {
+    text-align: right;
+  }
 
   @media screen and (max-width: @screen-sm) {
     width: 95%;
+  }
+
+  .img {
+    vertical-align: middle;
+    margin-left: 65px;
   }
 
   .icon {
