--- a/my-project/.temp/ant-design-pro.less
+++ b/my-project/.temp/ant-design-pro.less
@@ -2866,6 +2866,55 @@ font.weak {
 /* 
   Convert to from  src/undefined
  */
+
+.antd-pro-pages-_-user1-settings-my-account-tableList {
+  .antd-pro-pages-_-user1-settings-my-account-tableListOperator {
+    margin-bottom: 16px;
+    button {
+      margin-right: 8px;
+    }
+  }
+}
+
+.antd-pro-pages-_-user1-settings-my-account-tableListForm {
+  .ant-form-item {
+    margin-bottom: 24px;
+    margin-right: 0;
+    display: flex;
+    > .ant-form-item-label {
+      width: auto;
+      line-height: 32px;
+      padding-right: 8px;
+    }
+    .ant-form-item-control {
+      line-height: 32px;
+    }
+  }
+  .ant-form-item-control-wrapper {
+    flex: 1;
+  }
+  .antd-pro-pages-_-user1-settings-my-account-submitButtons {
+    display: block;
+    white-space: nowrap;
+    margin-bottom: 24px;
+  }
+}
+
+@media screen and (max-width: @screen-lg) {
+  .tableListForm :global(.ant-form-item) {
+    margin-right: 24px;
+  }
+}
+
+@media screen and (max-width: @screen-md) {
+  .tableListForm :global(.ant-form-item) {
+    margin-right: 8px;
+  }
+}
+
+/* 
+  Convert to from  src/undefined
+ */
 .antd-pro-pages-_-user1-settings-phone-view-area_code {
   max-width: 128px;
   margin-right: 8px;
