--- a/my-project/.temp/ant-design-pro.less
+++ b/my-project/.temp/ant-design-pro.less
@@ -973,6 +973,10 @@
   Convert to from  src/undefined
  */
 
+/* 
+  Convert to from  src/undefined
+ */
+
 .antd-pro-components-header-dropdown-index-container > * {
   background-color: #fff;
   box-shadow: @shadow-1-down;
@@ -1676,14 +1680,14 @@
 }
 
 .antd-pro-components-sider-menu-index-sider {
-  left: 35px; //竖版时的左边界  //横板的左边界在TopNavHeader.less里调
+  //竖版时的左边界  //横板的左边界在TopNavHeader.less里调
   min-height: 100vh;
   box-shadow: 2px 0 6px rgba(0, 21, 41, 0.35);
   position: Fixed;
   z-index: 10;
   &.antd-pro-components-sider-menu-index-fixSiderbar {
     position: fixed;
-    top: 90px;
+    top: 0;
     left: 0;
     :global(.ant-menu-root) {
       overflow-y: auto;
@@ -2127,6 +2131,8 @@
     height: auto;
     max-width: 100%;
     max-height: 100%;
+    text-align: center;
+    vertical-align: middle;
   }
 }
 
@@ -2167,6 +2173,21 @@
     color: #2eabff;
   }
 }
+
+.antd-pro-pages-_-dashboard-mainpage-img1 {
+  margin-left: 40%;
+  text-align: center;
+  vertical-align: middle;
+}
+.antd-pro-pages-_-dashboard-mainpage-img2 {
+  margin-left: 30%;
+  text-align: center;
+  vertical-align: middle;
+}
+
+/* 
+  Convert to from  src/undefined
+ */
 
 /* 
   Convert to from  src/undefined
