--- a/my-project/src/components/SiderMenu/index.less
+++ b/my-project/src/components/SiderMenu/index.less
@@ -27,14 +27,14 @@
 }
 
 .sider {
-  left: 35px; //竖版时的左边界  //横板的左边界在TopNavHeader.less里调
+  //竖版时的左边界  //横板的左边界在TopNavHeader.less里调
   min-height: 100vh;
   box-shadow: 2px 0 6px rgba(0, 21, 41, 0.35);
   position: Fixed;
   z-index: 10;
   &.fixSiderbar {
     position: fixed;
-    top: 90px;
+    top: 0;
     left: 0;
     :global(.ant-menu-root) {
       overflow-y: auto;
