--- a/my-project/src/pages/_Dashboard/mainpage.less
+++ b/my-project/src/pages/_Dashboard/mainpage.less
@@ -12,14 +12,14 @@
     color: #fff;
   }
   .img {
-    width:auto;
-    height:auto;
+    width: auto;
+    height: auto;
     max-width: 100%;
-    max-height:100%;
-
+    max-height: 100%;
+    text-align: center;
+    vertical-align: middle;
   }
 }
-
 
 .card {
   margin-left: auto;
@@ -30,7 +30,7 @@
   overflow: hidden;
   height: 150px;
   line-height: 90px;
-  background: #CCC;
+  background: #ccc;
 
   .h1 {
     vertical-align: middle;
@@ -59,4 +59,13 @@
   }
 }
 
-
+.img1 {
+  margin-left: 40%;
+  text-align: center;
+  vertical-align: middle;
+}
+.img2 {
+  margin-left: 30%;
+  text-align: center;
+  vertical-align: middle;
+}
