--- a/my-project/.temp/ant-design-pro.less
+++ b/my-project/.temp/ant-design-pro.less
@@ -973,6 +973,26 @@
   Convert to from  src/undefined
  */
 
+.antd-pro-components-goods-index-search {
+  width: 100%;
+}
+
+.antd-pro-components-goods-index-h4 {
+  line-height: 20px;
+  text-align: left;
+  vertical-align: middle;
+}
+
+.antd-pro-components-goods-index-button {
+  text-align: right;
+  vertical-align: middle;
+}
+
+.antd-pro-components-goods-index-list {
+  text-align: center;
+  vertical-align: middle;
+}
+
 /* 
   Convert to from  src/undefined
  */
@@ -2188,6 +2208,13 @@
 /* 
   Convert to from  src/undefined
  */
+.antd-pro-pages-_-goods-dress-a-card {
+  text-align: center;
+  vertical-align: middle;
+}
+.antd-pro-pages-_-goods-dress-a-page {
+  text-align: right;
+}
 
 /* 
   Convert to from  src/undefined
