--- a/my-project/src/components/SiderMenu/index.less
+++ b/my-project/src/components/SiderMenu/index.less
@@ -69,7 +69,7 @@
     height: @nav-header-height;
     line-height: @nav-header-height;
     left: 0; //154px
-    background: #ff4000;
+    background: #fff;  // 自己加入的item颜色
   }
   .drawer .drawer-content {
     background: #2eabff;
