--- a/my-project/src/components/PageHeader/index.less
+++ b/my-project/src/components/PageHeader/index.less
@@ -1,8 +1,7 @@
 @import '~antd/lib/style/themes/default.less';
 
 .pageHeader {
-  margin-top: 70px;
-  background: #ffffff; //@component-background;
+  background: #fff; //@component-background;
   padding: 16px 32px 0 32px;
   border-bottom: @border-width-base @border-style-base @border-color-split;
   .wide {
@@ -39,7 +38,7 @@
     margin-right: 16px;
     padding-top: 1px;
     > img {
-      width: 500px;
+      width: 28px;
       height: 28px;
       border-radius: @border-radius-base;
       display: block;
