--- a/my-project/src/components/GlobalHeader/index.less
+++ b/my-project/src/components/GlobalHeader/index.less
@@ -5,7 +5,7 @@
 .header {
   height: @layout-header-height; //@layout-header-height
   padding: 0;
-  background: #61dafb;
+  background: #fff;
   box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
   position: relative;
 }
@@ -26,7 +26,7 @@
 
 .menu {
   :global(.anticon) {
-    margin-right: 80px;
+    margin-right: 8px;
   }
   :global(.ant-dropdown-menu-item) {
     min-width: 160px;
@@ -124,8 +124,4 @@
       }
     }
   }
-}
-
-.search1 {
-  width: 650px;
 }
