--- a/my-project/src/components/SiderMenu/index.less
+++ b/my-project/src/components/SiderMenu/index.less
@@ -8,7 +8,7 @@
   line-height: @nav-header-height;
   padding-left: (@menu-collapsed-width - 32px) / 2;
   transition: all 0.3s;
-  background: #2eabff;
+  background: #002140;
   overflow: hidden;
   img {
     display: inline-block;
@@ -25,20 +25,20 @@
     font-weight: 600;
   }
 }
-
 .sider {
   //竖版时的左边界  //横板的左边界在TopNavHeader.less里调
   min-height: 100vh;
   box-shadow: 2px 0 6px rgba(0, 21, 41, 0.35);
-  position: Fixed;
+  position: relative;
   z-index: 10;
   &.fixSiderbar {
+    box-shadow: 2px 0 8px 0 rgba(29, 35, 41, 0.05);
     position: fixed;
     top: 0;
     left: 0;
     :global(.ant-menu-root) {
       overflow-y: auto;
-      left: 90px;
+      // left: 90px;
       height: ~'calc(100vh - @{nav-header-height})';
     }
   }
@@ -53,7 +53,6 @@
       }
     }
     :global(.ant-menu-light) {
-      left: 90px;
       border-right-color: transparent;
     }
   }
@@ -68,11 +67,10 @@
   .top-nav-menu li.ant-menu-item {
     height: @nav-header-height;
     line-height: @nav-header-height;
-    left: 0; //154px
     background: #fff;  // 自己加入的item颜色
   }
   .drawer .drawer-content {
-    background: #2eabff;
+    background: #002140;
   }
   .ant-menu-inline-collapsed {
     & > .ant-menu-item .sider-menu-item-img + span,
@@ -83,12 +81,9 @@
       .sider-menu-item-img
       + span,
     & > .ant-menu-submenu > .ant-menu-submenu-title .sider-menu-item-img + span {
-      border-bottom: 1px;
-      border-right: 90px;
       max-width: 0;
       display: inline-block;
       opacity: 0;
-      background: chartreuse;
     }
   }
   .ant-menu-item .sider-menu-item-img + span,
