--- a/my-project/src/pages/User/Login.less
+++ b/my-project/src/pages/User/Login.less
@@ -1,7 +1,7 @@
 @import '~antd/lib/style/themes/default.less';
 
 .main {
-  margin-left: 65px; // card部分的样式
+  // margin-left: 65px; // card部分的样式
   width: 364px; //500px
 
   .twoD {
