--- a/my-project/src/pages/_Dashboard/mainpage.less
+++ b/my-project/src/pages/_Dashboard/mainpage.less
@@ -60,12 +60,68 @@
 }
 
 .img1 {
+  width: 128px;
   margin-left: 40%;
   text-align: center;
   vertical-align: middle;
 }
 .img2 {
+  width: 128px;
   margin-left: 30%;
   text-align: center;
   vertical-align: middle;
+}
+
+@media screen and (max-width: 500px) {
+  .img1 {
+    margin-left: 30%;
+    width: 96px;
+    text-align: center;
+    vertical-align: middle;
+  }
+
+  .card {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    width: 50%;
+    text-align: center;
+    overflow: hidden;
+    height: 70px;
+    line-height: 30px;
+    background: #ccc;
+
+    .h1 {
+      font-size: medium;
+      vertical-align: middle;
+      text-align: center;
+      color: #2eabff;
+    }
+  }
+  .img2 {
+    width: 96px;
+    margin-left: 8%;
+    text-align: center;
+    vertical-align: middle;
+  }
+
+  .card1 {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 35px;
+    width: 30%;
+    text-align: center;
+    overflow: hidden;
+    height: 50px;
+    line-height: 5px;
+    background: white;
+    border-color: red;
+    margin-bottom: 50px;
+
+    .h3 {
+      vertical-align: middle;
+      text-align: center;
+      color: #2eabff;
+    }
+  }
 }
