--- a/my-project/src/pages/_User1/Settings/AddressView.less
+++ b/my-project/src/pages/_User1/Settings/AddressView.less
@@ -185,7 +185,7 @@
 .standardListForm {
   :global {
     .ant-form-item {
-      margin-bottom: 12px;
+      margin: 10px 20px 10px 20px;
       &:last-child {
         padding-top: 4px;
         margin-bottom: 32px;
