--- a/my-project/src/pages/_User1/Settings/Info.less
+++ b/my-project/src/pages/_User1/Settings/Info.less
@@ -1,6 +1,7 @@
 @import '~antd/lib/style/themes/default.less';
 
 .main {
+  margin-top: 64px;
   width: 100%;
   height: 100%;
   background-color: @body-background;
@@ -87,15 +88,21 @@
   }
 }
 
-@media screen and (max-width: @screen-md) {
+@media screen and (max-width: @screen-lg) {
   .main {
+    // margin-top: 0;
     flex-direction: column;
     .leftmenu {
       width: 100%;
       border: none;
     }
     .right {
-      padding: 40px;
+      padding: 20px;
     }
+  }
+}
+@media screen and (max-width: @screen-sm) {
+  .main{
+    margin-top: 0;
   }
 }
