--- a/my-project/src/pages/_User1/Settings/MyAccount.less
+++ b/my-project/src/pages/_User1/Settings/MyAccount.less
@@ -5,7 +5,7 @@
   .tableListOperator {
     margin-bottom: 16px;
     button {
-      margin-right: 8px;
+      //margin-right: 8px;
     }
   }
 }
@@ -19,7 +19,7 @@
       > .ant-form-item-label {
         width: auto;
         line-height: 32px;
-        padding-right: 8px;
+        //padding-right: 8px;
       }
       .ant-form-item-control {
         line-height: 32px;
