--- a/my-project/src/pages/_User1/Settings/MyData.less
+++ b/my-project/src/pages/_User1/Settings/MyData.less
@@ -84,7 +84,7 @@
     :global {
       .ant-list-item-content {
         display: block;
-        flex: none;
+        flex: 1;
         width: 100%;
       }
       .ant-list-item-action {
@@ -105,6 +105,7 @@
       }
     }
   }
+
 }
 
 @media screen and (max-width: @screen-sm) {
@@ -181,14 +182,14 @@
     }
   }
 }
-
+.img {
+  vertical-align: middle;
+  text-align: center;
+  width: 75%;
+}
 .standardListForm {
   :global {
-    .img {
-      vertical-align: middle;
-      text-align: center;
-    }
-
+    // width: 90vh;
     .ant-form-item {
       margin-bottom: 12px;
       margin-right: 12px;
