--- a/my-project/src/pages/_Detail/Detail.less
+++ b/my-project/src/pages/_Detail/Detail.less
@@ -7,10 +7,21 @@
     width: 80%;
   }
 
+  .img {
+    margin-bottom: 20px;
+  }
+
   .tabs{
     margin-top: 60px;
     vertical-align: middle;
     text-align: center;
+
+    .mycard {
+      width: 95%;
+      margin-bottom: 20px;
+      vertical-align: middle;
+      text-align: center;
+    }
 
     .tabpane {
       font-size: 100%;
