--- a/my-project/src/pages/_ShoppingCart/Cart.less
+++ b/my-project/src/pages/_ShoppingCart/Cart.less
@@ -47,3 +47,24 @@
     margin-right: 8px;
   }
 }
+
+.div {
+  background-color: #FFEFEF;
+  font-size: 17px;
+  margin-top: 17px;
+  margin-bottom: 17px;
+}
+.card {
+  background-color: #FFEFEF;
+}
+.button {
+  margin-top: 20vh;
+  margin-left: 10vh;
+}
+
+.listCard {
+  border-color: red;
+
+}
+
+
